<?xml version="1.0"?>
<package format="2">
  <name>bamboobot</name>
  <version>0.1.0</version>
  <description>The bsactuator package</description>
  <maintainer email="nagao@rb-sapiens.com">Shun Nagao</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
